      locale if the former is set, in addition to the language and
      territory.
    - Bare .so includes (e.g. ".so foo.1" rather than ".so man1/foo.1") now
      work, although only within the same manual page hierarchy for now
      (partially fixes #503472).
  * Add Homepage field.
  * Policy version 3.8.0: no changes required.

 -- Colin Watson <cjwatson@debian.org>  Mon, 17 Nov 2008 12:05:54 +0000

man-db (2.5.2-3) unstable; urgency=low

  * Backport from trunk:
    - src/manconv.c (try_iconv): Remove premature optimisation that
      sometimes caused us to write incomplete output.
    - src/encodings.c (add_manconv): Always use manconv even if iconv could
      theoretically do the job, as manconv has slightly more permissive
      behaviour that is generally more suitable for converting manual page
      source (closes: #498082).

 -- Colin Watson <cjwatson@debian.org>  Sun, 07 Sep 2008 16:31:24 +0100

man-db (2.5.2-2) unstable; urgency=low

  * Update DEB_BUILD_OPTIONS parsing code from policy 3.8.0.
  * Skip building the database on buildds (just Ubuntu buildds for now,
    since Debian buildds aren't detectable; see the comment in the postinst
    for more detail).

 -- Colin Watson <cjwatson@debian.org>  Tue, 08 Jul 2008 21:39:42 +0100

man-db (2.5.2-1) unstable; urgency=low

  * New upstream release.
    - Make /usr/local/share/man mandatory rather than /usr/local/man
      (thanks, Reuben Thomas; closes: #463892).
    - Whatis parsing stops at .ie or .if conditionals (closes: #467444).
    - In the CJK UTF-8 special case, check the canonicalised encoding in
      order that locale specifications such as "zh_CN.utf8" work (closes:
      #467249).
    - Improve 'man -E' to allow overriding the output encoding explicitly,
      rather than implicitly (and unreliably) by changing the *roff device
      (closes: #466396).
    - Don't emit encoding conversion errors in mandb's quiet mode (closes:
      #473862).