@@ -5,12 +5,11 @@ package = man-db
 dtmp    = debian/$(package)
 
 ifeq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
-CFLAGS = -O2 -g -Wall
-LDFLAGS = -g
+CFLAGS = -O2 -g
 else
-CFLAGS = -g -Wall
-LDFLAGS = -g
+CFLAGS = -g
 endif
+LDFLAGS = -g
 
 DEB_BUILD_GNU_TYPE = $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 DEB_HOST_GNU_TYPE = $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -21,7 +20,8 @@ CONFARGS = --build=$(DEB_HOST_GNU_TYPE) --host=$(DEB_HOST_GNU_TYPE)
 endif
 
 configure-stamp:
-	./configure --prefix=/usr --libexecdir=\$${libdir} \
+	CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" ./configure \
+		    --prefix=/usr --libexecdir=\$${libdir} \
 	            --enable-setuid --enable-undoc='man 7 undocumented' \
 	            --with-device=latin1 --enable-mb-groff \
 	            --with-config-file=/etc/manpath.config \
@@ -36,7 +36,7 @@ build: build-stamp
 build-stamp: configure-stamp
 # Builds the binary package.
 	dh_testdir
-	$(MAKE) CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)"
+	$(MAKE)
 	touch $@
 
 clean:
