@@ -26,6 +26,9 @@ man-db (2.5.3-1) UNRELEASED; urgency=low
       (partially fixes #503472).
   * Add Homepage field.
   * Policy version 3.8.0: no changes required.
+  * Pass CFLAGS and LDFLAGS to configure rather than make so that we don't
+    have to keep up with the set of warnings that configure decides to
+    enable.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 17 Nov 2008 12:05:54 +0000
 
